typescript/checker/tests/conformance/expressions/asOperator/asOperatorAmbiguity.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            198,
        ),
        hi: BytePos(
            199,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/asOperator/asOperatorAmbiguity.ts:7:14
  |
7 | var z = y[0].m; // z should be string
  |              ^

